--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: url(./images/musicbg.jpg);
+    background: url(./images/mscbg.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     font-weight: bold;
+    height: 100vh;
     }
     
     .container{
@@ -14,6 +15,7 @@ body {
       justify-content: center;
       margin-top: 70px;
       margin-bottom: 50px;
+      color: white;
   }
     .main{
         display: flex;
@@ -24,7 +26,7 @@ body {
       border: 1px solid transparent;
       padding: 10px;
       border-radius: 20px;
-      box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+      box-shadow: rgba(109, 2, 64, 0.808) 5px 0px 20px 8px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     }
     
     .music_playlist {
@@ -89,7 +91,7 @@ body {
     .prev-track:hover,
     .next-track:hover {
     opacity: 1.0;
-    color: rgb(24, 175, 221);
+    color: rgb(221, 24, 188);
     }
     
     .slider_container {
@@ -168,6 +170,6 @@ footer .copyright{
 }
 
 footer .copyright span{
-  color: blue;
+  color: rgb(255, 0, 170);
 }
     
